@@ -1,3 +1,9 @@
+2001-09-29 Baptiste Lepilleur <gaiacrtn@free.fr>
+
+	* example/cppunittest/TestCaller.*: remove some memory leaks.
+	TestCaller exception catching features is now tested correctly.
+	Previous test tested nothing!
+
 2001-09-23  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* configure.in: Set version to 1.6.0.
